[project]
authors = [{name = "Saito Tsutomu", email = "tsutomu7@hotmail.co.jp"}]
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "nicegui>=2.11.1",
]
description = "Memory game on NiceGUI"
name = "nicegui-memory"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.5"

[project.urls]
homepage = "https://github.com/SaitoTsutomu/nicegui-memory"

[project.scripts]
memory = "nicegui_memory:main"

[tool.uv]
dev-dependencies = ["pytest>=8.3.4"]

[tool.uv.workspace]
members = ["src/tools"]

[tool.mypy]
files = "src"
ignore_missing_imports = true

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
ignore = ["ANN", "CPY", "D203", "D213", "D400", "D415", "DOC", "E501"]
preview = true
select = ["ALL"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
